fixes a few things on mobile

--- a/themes/mintheme/static/css/main-responsive.less
+++ b/themes/mintheme/static/css/main-responsive.less
@@ -107,4 +107,12 @@
             margin-top: 25px;
         }
     }
+
+    img {
+        width: 100%;
+    }
+
+    .image-wrapper {
+        padding: 0;
+    }
 }
